Stage 4 – Godlike: Fullstack Integration; DONE & setup for ios; DONE

--- a/ios/AmantanaPlants/Info.plist
+++ b/ios/AmantanaPlants/Info.plist
@@ -54,5 +54,7 @@
 	<string>Amantana membutuhkan akses ke kamera untuk mengambil foto tanaman</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Amantana membutuhkan akses untuk menyimpan foto tanaman ke galeri</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Amantana membutuhkan akses ke dokumen untuk menyimpan foto tanaman</string>
 </dict>
 </plist>
