--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,7 +13,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'AmantanaPlants' do
+target 'Plantify' do
   config = use_native_modules!
 
   use_react_native!(
